[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Fonts/Pixellari.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 20
extra_spacing_top = 5
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.396078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="insidePauseMenu" type="VBoxContainer" parent="."]
margin_left = 246.0
margin_top = 190.0
margin_right = 388.0
margin_bottom = 332.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="insidePauseMenu"]
margin_right = 142.0
margin_bottom = 31.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.431373, 1 )
custom_fonts/font = SubResource( 2 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="insidePauseMenu"]
margin_top = 37.0
margin_right = 142.0
margin_bottom = 68.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.431373, 1 )
custom_fonts/font = SubResource( 2 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreen" type="Button" parent="insidePauseMenu"]
margin_top = 74.0
margin_right = 142.0
margin_bottom = 105.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.431373, 1 )
custom_fonts/font = SubResource( 2 )
text = "Title Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="insidePauseMenu"]
margin_top = 111.0
margin_right = 142.0
margin_bottom = 142.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.431373, 1 )
custom_fonts/font = SubResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.503
anchor_top = 0.272
anchor_right = 0.503
anchor_bottom = 0.272
margin_left = -125.92
margin_top = 17.08
margin_right = -65.92
margin_bottom = 33.08
rect_scale = Vector2( 4, 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="insidePauseMenu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="insidePauseMenu/TitleScreen" to="." method="_on_TitleScreen_pressed"]
[connection signal="pressed" from="insidePauseMenu/Quit" to="." method="_on_Quit_pressed"]
